code/new/academically-admin/src/shared/components/preview/services/services.component.scss
.service-preview {
    border: 1px solid #E4EBF6;
    border-radius: 10px;
    overflow: hidden;
    margin-top: 10px;

    &-remove {
        position: absolute;
        top: 14px;
        right: 16px;
        z-index: 2;
        width: 20px;
        height: 20px;
        border-radius: 50%;
        background: #12263F;
        color: white;
        opacity: 0.5;
        backdrop-filter: blur(2px);
    }

    &-image {
        height: 283px;

        img {
            display: block;
            width: 100vw;
            height: 100vh;
            max-height: 100%;
            max-width: 100%;
            object-fit: cover;
        }
    }

    &-author {
        position: absolute;
        bottom: 30px;
        right: 36px;
        z-index: 2;
        height: 37px;
        background-color: rgba(0, 0, 0, 0.5);
        border-radius: 21px;
        padding: 0 0 0 20px;

        &-name {
            font-weight: 600;
            font-size: 10px;
            line-height: 13px;
            color: #FFFFFF;
        }

        &-avatar {
            width: 37px;
            height: 37px;
            img {
                border: 1px solid #282828;
            }
        }
    }

    &-content {
        background-color: #F9FBFD;
        padding: 20px;

        &-author-article {
            & > * {
                vertical-align: middle;
                gap: 5px;

            }

            span {
                font-size: 10px;
                color: #6E84A3;
            }
        }
    }

    &-info {
        padding: 15px 20px 20px;
        border-top: 1px solid #E3EBF6;

        &-left {
            &-identity {
                &-name {
                    font-weight: 600;
                    font-size: 20px;
                    line-height: 152.4%;
                    letter-spacing: -0.01em;
                    color: #12263F;
                }

                &-type {
                    padding: 3px 10px;
                    background: #B1C2D9;
                    border-radius: 13px;
                    font-weight: 600;
                    font-size: 10px;
                    line-height: 13px;
                    text-align: center;
                    color: #FFFFFF;
                }
            }

            &-details {
                margin-top: 5px;

                &-separator {
                    font-size: 12px;;
                    font-weight: 400;
                    color: #6E84A3;
                    padding: 0 10px;
                }

                &-type {
                    font-size: 14px;
                    font-weight: 400;
                    color: #12263F;
                }

                &-price {
                    font-size: 14px;
                    font-weight: 400;
                    color: #12263F;
                }

                &-slots {
                    font-size: 12px;
                    font-weight: 400;
                    color: #6E84A3;
                }

                &-composition {
                    font-size: 12px;
                    font-weight: 400;
                    color: #6E84A3;
                }

                &-reviews {
                    &-value {
                        font-size: 12px;
                        font-weight: 700;
                        color: #646464;
                    }

                    &-star {
                        width: 11px;
                        height: 11px;
                        margin: 0 4px;
                    }

                    &-count {
                        font-size: 12px;
                        font-weight: 400;
                        color: #646464;
                    }
                }
            }
        }

        &-right {
            &-learnmore {
                width: 96px;
                height: 28px;
                background: #FFFFFF;
                border: 1px solid #E3EBF6;
                border-radius: 4px;
                font-weight: 400;
                font-size: 13px;
                text-align: center;
                letter-spacing: -0.01em;
                color: #12263F;
            }
        }
    }
}

